# airport-infra

./: .env.example  .gitignore  APPENDIX_D_METHODOLOGY_LAYERS.md  APPENDIX_E_SMART_MONEY_DIVERGENCE.md  CLAUDE_CODE_BUILD_PROMPT.md  Makefile  PLATFORM_BRIEF_v4_LOCKED.md  pyproject.toml
.github/workflows/: ci.yml  keepalive.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_ourairports_ident.py  003_add_lifecycle_position.py  004_create_transactions.py  005_add_continuing_holders.py
analysis/: anomaly_detection.py  consortium_network.py  cross_validation.py  fund_vintage_wall.py  holdings.py  lifecycle_position.py
backend/: config.py  main.py  storage.py
backend/api/: airports.py  anomalies.py  capital_flows.py  deps.py  ingestion.py  records.py  review.py  (+3 more)
ingestion/: base.py  documents.py
llm_pipelines/: base.py  climate_extraction.py  concession_extraction.py  disclosure_runner.py  operational_extraction.py  review_queue.py  run_climate_extraction.py  run_climate_heathrow.py  run_concession_extraction.py  run_operational_extraction.py  run_transaction_extraction.py  transaction_extraction.py
tests/: conftest.py  test_anomaly_detection.py  test_api.py  test_caa_uk.py  test_climate_extraction.py  test_concession_extraction.py  test_consortium_network.py  test_cross_validation.py  test_esma_xbrl.py  test_eurostat_aviation.py  test_fund_vintage_wall.py  test_holdings.py  test_ingestion_base.py  test_lifecycle_position.py  test_llm_pipeline_base.py  test_operational_extraction.py  test_transaction_extraction.py  test_transactions.py
(+32 files in other folders)
