[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airport-infra"
version = "0.1.0"
description = "Global airport infrastructure intelligence platform"
requires-python = ">=3.12"
dependencies = [
    # Web / API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    # HTTP
    "httpx>=0.28.0",
    # LLM
    "anthropic>=0.40.0",
    # File parsing
    "pyreadstat>=1.2.7",   # World Bank PPI Stata files
    "openpyxl>=3.1.5",     # SBTi XLSX, ESMA XBRL packages
    "lxml>=5.3.0",         # XBRL XML parsing
    # Config
    "python-dotenv>=1.0.1",
    # Document storage (Cloudflare R2 via S3-compatible API)
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-psycopg2>=2.9.21",
    "httpx>=0.28.0",  # for TestClient
]

[tool.hatch.build.targets.wheel]
packages = ["backend", "ingestion", "llm_pipelines"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
